# dice_telegram_bot

./: pyproject.toml  requirements.txt
 bot/: config.py  keyboards.py  main.py  setup.py
database/: init_db.py
